--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ header {
   height: 100px;
   display: flex;
   align-items: center;
-  background: ##0511af;  /* fallback for old browsers */
+  background: #0511af;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #0511af, #053061);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #0511af, #053061); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
@@ -25,6 +25,7 @@ header > p {
   font-family: VT323, monospace;
   color: whitesmoke;
   font-size: 50px;
+  text-align: center;
   margin-left: 60px;
 }
 
