--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ header > p {
   font-family: VT323, monospace;
   color: whitesmoke;
   font-size: 50px;
-  text-align: center;
-  
+  text-align: justify;
+  margin-left: 60px;
 }
 
 .meme {
